2003-12-25  Jackson Harper <jackson@ximian.com>

	* Page.cs: Throw error if the session is accessed when sessions
	are disabled.
	
2003-12-18  Jackson Harper <jackson@ximian.com>

	* Page.cs: Write Trace info.
	
2003-12-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* LosFormatter.cs: new ctor for 1.1. The default ctor is public.
	* Page.cs: added ViewStateUserKey and made RegisterclientScriptFile
	internal.
	* PageParser.cs: the ctor is public.
	* PartialCachingAttribute.cs: added new ctor and Shared property.

2003-12-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Page.cs: assign the ErrorPage to the context if we get an exception
	when processing the page which only calls Unload.

	* PageParser.cs: handle ErrorPage.

2003-12-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ObjectStateFormatter.cs: added formatters for Unit and FontUnit, which
	are not [Serializable]. Fixes bug #52244.

2003-12-16  Jackson Harper <jackson@ximian.com>

	* Page.cs: Render trace data when tracing is enabled.
	
2003-12-15  Jackson Harper <jackson@ximian.com>

	* PageParser.cs: Add Trace and Trace mode attributes.
	
2003-12-15  Jackson Harper <jackson@ximian.com>

	* Page.cs: Use the context trace object.
	
2003-12-14  Alon Gazit <along@mainsoft.com>
	* AttributeCollection.cs: Changed AttributeCollection.Render().
	After the change attributes ,that their value is null, aren't 
	rendered.

2003-12-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Control.cs: remove a few dangling ^M, don't set values for fields
	that has the default value. If Visible is modified and we're tracking
	viewstate, save and restore it. Fixes bug #48689.

2003-12-11  Jackson Harper <jackson@ximian.com>

	* Control.cs: Give null for the ID if it hasn't been explicitly
	set. This fixes bug #51520.
	
2003-12-08  Jackson Harper <jackson@ximian.com>

	* PageParser.cs: Ignore the SmartNavigation attribute for now.
	
2003-12-05  Jackson Harper <jackson@ximian.com>
